# real-estate-dscr-ai-fund-os

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements-api.txt
ai_agent/decision_engine/: engine.py
backend/api_gateway/: main.py
backend/api_gateway/routers/: bidding.py  decision.py  health.py  lender.py  portfolio.py  underwriting.py
backend/shared_models/: lender.py  property.py  rl_schema.py  underwriting.py
bidding_system/real_time_bidding_engine/: engine.py
core/underwriting_engine/: engine.py
data/sample_properties/: generate_sample_data.py  properties.json
frontend/vite_react_dashboard/: index.html  package.json  tailwind.config.ts
frontend/vite_react_dashboard/src/: App.tsx
frontend/vite_react_dashboard/src/api/: client.ts
frontend/vite_react_dashboard/src/components/: MetricCard.tsx
frontend/vite_react_dashboard/src/pages/: BiddingPage.tsx  DealDecisionPage.tsx  PortfolioPage.tsx  UnderwritingPage.tsx
lender_simulator/approval_predictor/: predictor.py
lender_simulator/dscr_lender_models/: lender_registry.py
market_intelligence/competitive_tracker/: tracker.py
ml/portfolio_rl/: deal_generator.py  environment.py  trainer.py
ml/rehab_model/: estimator.py
scripts/: run_full_analysis.py
tests/unit/: test_bidding_engine.py  test_lender_predictor.py  test_underwriting_engine.py
