[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dscr-ai-fund-os"
version = "0.1.0"
description = "Institutional DSCR Real Estate AI Fund OS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "redis>=5.0.4",
    "celery[redis]>=5.4.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "xgboost>=2.0.3",
    "scipy>=1.13.0",
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.3.0",
    "torch>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "geopy>=2.4.1",
    "shapely>=2.0.4",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.1",
    "bcrypt>=4.1.3",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.2.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ml*", "ai_agent*", "market_intelligence*", "lender_simulator*", "ingestion*", "bidding_system*", "portfolio*", "backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-omit=tests/*"

[tool.ruff]
line-length = 100
target-version = "py311"
